--- a/src/Style/navbar__.scss
+++ b/src/Style/navbar__.scss
@@ -38,7 +38,7 @@
             position: fixed;
             top: 0px;
             left: 0px;
-            height: 500px;
+            height: 100%;
             width: 0px;
             background-color: #222;
             z-index: 1;
